--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
     "ts-jest": "^26.5.6",
     "typescript": "^4.8.4"
   },
